--- a/home.html
+++ b/home.html
@@ -1,1 +1,26 @@
 
+<!DOCTYPE html>
+<html lang="en" id="top">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+ <header class="site-header">
+ <div class="nav-bar">
+  <a href="aboutus.html" class="nav-link">ABOUT US</a>
+  <a href="menu.html" class="nav-link menu-link">MENU</a>
+</div>
+
+  <div class="brand">
+    <h1 class="title">Quesada</h1>
+    <p class="tagline">Delicious food for every mood</p>
+  </div>
+</header>
+
+  <main>
+    <section class="hero">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQY_x54KsUbnvoEthATI8uwYAcEY5rpqlYLli43zoTciIQMWcRc66XhM7wNP_axFcgFmLbuRET8r7CuxTC7FKhqZasu0eEwg-gXzm5oT4Br&s=10" alt="Stacked Burritos with toppings" class="hero-image" />
+    </section>
+  </main>
+
+</body>
+</html>
