Create menu.html with menu items and layout

--- a/menu.html
+++ b/menu.html
@@ -1,1 +1,35 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Menu Page</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <div class="container">
+    <div class="sidebar">
+      <h1>On the Menu</h1>
+      <button class="home-button"><a href="home.html" class="home-button"> <strong>BACK TO HOME</strong></button></a>
+    </div>
+    <div class="menu-items">
+      <div class="card">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRS24ZYOenAfa6RL1KYWh7-rfzRxDlBnoklxmY1E2pPDcg3hoAJu5TR97AdHUvJUjx_eMzbaFl0ck0ABe_N3f3HIalMmYfUPForFBOY5-6q&s=10" alt="Succulent Burritos" />
+        <h2>Succulent Burritos</h2>
+        <p>Packed with flavor and customizable to your liking.</p>
+      </div>
+      <div class="card">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQY_x54KsUbnvoEthATI8uwYAcEY5rpqlYLli43zoTciIQMWcRc66XhM7wNP_axFcgFmLbuRET8r7CuxTC7FKhqZasu0eEwg-gXzm5oT4Br&s=10" alt="Authentic Tacos" />
+        <h2>Authentic Tacos</h2>
+        <p>Paired with dipping sauces that are too good to pass up.</p>
+      </div>
+      <div class="card">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJiUczmqpQ9NzrInfBn5JlgxScbiO4qUBQNw2oBKdfLq6up0BdHKAddmSQgWX5iqd0FYHHx0bZDe-5HZXxbt6yKYmLPH6_LulafeELNbaG&s=10" alt="Cafe De Olla" />
+        <h2>Cafe De Olla</h2>
+        <p>Traditional Artisan Mexican coffee with warm spices and a rustic soul.</p>
+      </div>
+    </div>
+  </div>
+</body>
+</html>
