Enhance home.html with comments for clarity
Added comments to clarify the purpose of header and navigation elements.

--- a/home.html
+++ b/home.html
@@ -5,9 +5,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
  <header class="site-header">
+
+   <!-- the header class tag represents the Introductory topic or the title as well as the navigational section of the website at the top of the page for easier styling in css.  -->
  <div class="nav-bar">
   <a href="aboutus.html" class="nav-link">ABOUT US</a>
   <a href="menu.html" class="nav-link menu-link">MENU</a>
+
+   <!--The About Us button takes you to the About Us page of the website by clicking on it. same for the menu link  -->
 </div>
 
   <div class="brand">
