Add link to aboutus.css stylesheet

--- a/aboutus.html
+++ b/aboutus.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
- 
+ <link href="aboutus.css" rel="stylesheet" type="aboutus/css"/>
   <a href="" class="back-button">BACK TO HOME</a>
 
   <main class="layout">
