Add stylesheet link to home.html

--- a/home.html
+++ b/home.html
@@ -25,6 +25,6 @@
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQY_x54KsUbnvoEthATI8uwYAcEY5rpqlYLli43zoTciIQMWcRc66XhM7wNP_axFcgFmLbuRET8r7CuxTC7FKhqZasu0eEwg-gXzm5oT4Br&s=10" alt="Stacked Burritos with toppings" class="hero-image" />
     </section>
   </main>
-
+ <link href="home.css" rel="stylesheet" type="home/css"/>
 </body>
 </html>
