--- a/menu.html
+++ b/menu.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+   <link href="menu.css" rel="stylesheet" type="menu/css"/>
   <div class="container">
     <div class="sidebar">
       <h1>On the Menu</h1>
